<resources>
    <string name="app_name">Mtg Counter</string>
    <string name="select_a_game_size">Select A Game Size</string>
    <string name="_2v2">2v2</string>
    <string name="two_player">Two Player</string>
    <string name="three_player">Three Player</string>
    <string name="four_player">Four Player</string>
    <string name="background">Background</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_two_player">TwoPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="poison">Poison</string>
    <string name="storm">Storm</string>
    <string name="energy">Energy</string>
    <string name="life">Life</string>
    <string name="reroll_colours">Reroll Colours</string>
    <string name="reset_counters_swipe_down_to_reset_all_counters_don_t_worry_there_s_a_confirmation_first">Reset Counters: Swipe down to reset all counters. Don\'t worry, there\'s a confirmation first!</string>
    <string name="mirror_mode_2_player_only">Mirror Mode (2 Player Only)</string>
    <string name="preference_file_key">tech.fluff.mtgcounter.firstrun</string>
    <string name="saved_start">false</string>
    <string name="seach_for_a_card_with_the_text_box_below">Search for a card.</string>
    <string name="search_rules">Search Rules</string>
    <string name="select_game_size">Select Game Size</string>
    <string name="solo">Solo</string>
    <string name="card_rulings">Card Rulings</string>
    <string name="reset_game">Reset Game</string>
    <string name="exit_game">End Game</string>
    <string name="player_2">Player 2 (bottom)</string>
    <string name="player_1">Player 1 (top)</string>
    <string name="life_log">Life Log</string>
</resources>
