<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimary"
    tools:context="tech.fluff.mtgcounter.StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/klddark" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:src="@drawable/mtgcounterbig" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/select_game_size"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:onClick="onePlayerStart"
            android:text="@string/solo"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:onClick="twoPlayerStart"
            android:text="@string/two_player"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:onClick="threePlayerStart"
            android:text="@string/three_player"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="6dp"
            android:background="@color/white"
            android:elevation="2dp"
            android:onClick="fourPlayerStart"
            android:text="@string/four_player"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>
